# KangNaengBot_Back

./: .env.backup  .gcloudignore  .gitignore  Procfile  REQUIREMENTS_GUIDE.md  car.py  create_staging_bucket.py  deploy.py  deploy_all.sh  generate_qr.py  main.py  pyproject.toml  requirements.txt  run_adk_web.sh  update_deployment.sh  vercel.json
agent-backend/: .gcloudignore  DEFENSE_IN_DEPTH.md  README.md  SECURITY_INPUT_SANITIZATION.md  config.py  deploy_backend.sh  main.py  requirements.txt  sync_requirements.sh
agent-backend/domain/: __init__.py
agent-backend/domain/entities/: __init__.py  chat_message.py  chat_session.py  profile.py  user.py
agent-backend/domain/repositories/: __init__.py  base.py  chat_message_repository.py  chat_session_repository.py  (+2 more)
agent-backend/routers/: auth.py
agent-backend/services/: chat_service.py  email_service.py  issue_tokens_service.py  memory_manager.py  memory_service.py  profile_service.py  refresh_tokens_service.py  session_manager.py  session_service.py
agent-backend/utils/: dependencies.py  input_sanitizer.py  jwt.py
agent-frontend/: package-lock.json  package.json
agent-frontend/src/: AgentChat.jsx
google_adk/: DEPLOYMENT.md  README.md  README_STRUCTURE.md  REQUIREMENTS.md  agent.py  callbacks.py
google_adk/agents/: __init__.py
google_adk/config/: __init__.py  secrets.py
google_adk/data/: delete_corpus_files.py  rename_gcs_file.py  test_corpus_query.py  upload_to_rag.py
google_adk/test/: meta_data.py  test.py  test_agent.py  test_search_tools.py
google_adk/tools_old/: __init__.py  search_tools.py
(+73 files in other folders)
